# IA368II

./: README.md  controller-child-myRobot.py  go_to_point.md  lvk_navigation.ttt  lvk_navigation.webm  myRobot.ttt  python_controller-child-lvk_navigation.py  python_controller-child-lvk_obstacle_avoidance.py  sim-1-goal-based-navigation.md  sim-2-obstacle-avoidance.md  sim-3-spiral-coverage.md
final_project/final_project_ws/src/my_robot_pkg/: package.xml  setup.cfg  setup.py
final_project/final_project_ws/src/my_robot_pkg/config/: explore_config.yaml  nav2_config.yaml  nav2_params.yaml  rf2o_laser_odometry_config.yaml  semantic_room_seg_classes.json  slam_config.yaml  slam_loc_params.yaml  slam_map_params.yaml
final_project/final_project_ws/src/my_robot_pkg/launch/: explore_frontier.launch.py  my_robot.launch.py  my_robot_description.launch.py  my_robot_localization.launch.py  my_robot_localize.launch.py  my_robot_mapping.launch.py  my_robot_navigation_launch.py  navigation_launch.py  slam_online_async.launch.py
final_project/final_project_ws/src/my_robot_pkg/map/: map_20251123_011750.pgm  map_20251123_011750.yaml  map_20251123_012515.yaml  map_final_project.pgm  maps_final_project.yaml
final_project/final_project_ws/src/my_robot_pkg/my_robot/: __init__.py  explore_frontier_node.py  my_robot_cartographer_node.py  my_robot_cmd_vel_node.py  my_robot_detection_node.py  my_robot_explorer_node.py  (+12 more)
myrobot_bringup_ws/src/myrobot_bringup/: README.MD  package.xml  setup.cfg  setup.py
myrobot_bringup_ws/src/myrobot_bringup/config/: lifecycle_manager.yaml
myrobot_bringup_ws/src/myrobot_bringup/launch/: bringup.launch.py
myrobot_bringup_ws/src/myrobot_bringup/myrobot_bringup/: __init__.py  autodocking_server.py  behaviour_server.py  charged_server.py  charging_server.py  cleaning_server.py  modes.py  myrobot_server.py
myrobot_bringup_ws/src/myrobot_bringup/resource/: myrobot_bringup
(+42 files in other folders)
